Fix spacing issues.

--- a/packages/ui/lit-grid/src/dx-grid.pcss
+++ b/packages/ui/lit-grid/src/dx-grid.pcss
@@ -101,13 +101,11 @@
         border: 1px solid transparent;
         border-radius: 2px;
 
-        &:has(.dx-tag), &:has(dx-tag-picker-item){
+        &:has(.dx-tag), &:has(dx-tag-picker-item) {
           text-overflow: clip;
           line-height: 0;
           --dx-grid-cell-content-padding-inline: 1px;
           --dx-grid-cell-content-padding-block: 1px;
-          --dx-grid-cell-editor-padding-inline: 0;
-          --dx-grid-cell-editor-padding-block: 0;
         }
       }
 
@@ -190,6 +188,13 @@
     max-block-size: var(--dx-grid-cell-editor-max-block-size);
     inline-size: min-content;
     max-inline-size: var(--dx-grid-cell-editor-max-inline-size);
+
+    &:has(.dx-tag), &:has(dx-tag-picker-item) {
+      text-overflow: clip;
+      line-height: 0;
+      --dx-grid-cell-editor-padding-inline: 1px;
+      --dx-grid-cell-editor-padding-block: 1px;
+    }
   }
 
   /* /// */
